--- a/loginStyle.css
+++ b/loginStyle.css
@@ -128,6 +128,7 @@ body {
     outline: 0 !important;
     box-sizing: border-box;
     padding: 12px 15px;
+    background-color: white;
 }
 .forgot-password-link {
     text-decoration: underline;
@@ -151,6 +152,7 @@ body {
     padding: 10px 15px;
     outline: 0 !important;
     border: 2px solid black;
+    background-color: white;
     box-shadow: 6px 6px;
     cursor: pointer;
     transition: 0s;
@@ -189,6 +191,7 @@ body {
     padding: 10px 15px;
     border: 2px solid black;
     box-shadow: 6px 6px;
+    background-color: white;
     cursor: pointer;
     display: flex;
     justify-content: center;
